--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,19 +18,67 @@ android {
     }
 }
 
+
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.1'
-    implementation 'com.android.support:cardview-v7:27.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
-
+    implementation 'com.android.support:exifinterface:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:27.0.1'
-    implementation 'com.android.support:recyclerview-v7:27.0.1'
-    implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+
+    // utils
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    implementation 'com.github.Commit451:bypasses:1.1.0'
+    implementation 'com.jakewharton:butterknife:8.8.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+    implementation 'com.drewnoakes:metadata-extractor:2.9.1'
+    implementation "com.orhanobut:hawk:2.0.1"
+    implementation 'com.commonsware.cwac:provider:0.4.3'
+
+    // rxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //it is recommended to keep the same version of rxAndroid
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+
+    // icons
+    implementation 'com.mikepenz:iconics-core:3.0.0@aar'
+    implementation "com.mikepenz:iconics-views:3.0.0@aar"
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
+
+    // ui
+    implementation 'uz.shift:colorpicker:0.5@aar'
+    implementation 'com.github.jetradarmobile:desertplaceholder:1.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.yalantis:ucrop:1.5.0'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.8.0'
+    implementation 'jp.wasabeef:recyclerview-animators:2.2.7'
+    implementation 'com.github.HoraApps:Liz:-SNAPSHOT'
+
+    // debug Only
+    //debugCompile project(':inappstoragereader')
+    implementation 'cat.ereza:customactivityoncrash:2.2.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+
+
+    // TODO check them out
+    implementation 'com.turingtechnologies.materialscrollbar:lib:10.0.3'
+    implementation 'de.psdev.licensesdialog:licensesdialog:1.8.3'
+
+
 }
