--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-    }
+        maven { url 'https://jitpack.io' }
+        maven { url  "http://dl.bintray.com/dasar/maven" }
+        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
+        }
 }
 
 task clean(type: Delete) {
